--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,40 +15,12 @@ data_transformation:
   root_dir: artifacts/data_transformation
   data_dir: artifacts/data_ingestion/data.parquet
 
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transformation/train_data.csv
+  test_data_path: artifacts/data_transformation/test_data.csv
+  model_name: model.joblib
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#
-#
-#
-#model_trainer:
-#  root_dir: artifacts/model_trainer
-#  train_data_path: artifacts/data_transformation/train.csv
-#  test_data_path: artifacts/data_transformation/test.csv
-#  model_name: model.joblib
-#
-#
-#
 #model_evaluation:
 #  root_dir: artifacts/model_evaluation
 #  test_data_path: artifacts/data_transformation/test.csv
