--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ mlflow==2.8.0
 notebook==7.0.6
 numpy==1.26.1
 scikit-learn==1.3.2
-matplotlib
+matplotlib~=3.7.2
 python-box==7.1.1
 pyYAML~=6.0.1
 tqdm
@@ -15,5 +15,10 @@ Flask-Cors
 pymongo~=4.5.0
 python-dotenv~=1.0.0
 setuptools~=68.2.2
--e .
+
 pyarrow~=11.0.0
+plotly~=5.18.0
+statsmodels~=0.14.0
+python-dateutil~=2.8.2
+xgboost~=1.7.6
+-e .
